<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<groupId>ch.rasc</groupId>
	<artifactId>edsutil</artifactId>
	<version>2.0.0-SNAPSHOT</version>

    <!-- 
	<parent>
		<artifactId>oss-parent</artifactId>
		<groupId>org.sonatype.oss</groupId>
		<version>7</version>
	</parent>
     -->
     
	<prerequisites>
		<maven>3.1.0</maven>
	</prerequisites>

	<properties>
		<hibernate.version>4.3.5.Final</hibernate.version>
		<querydsl.version>3.3.3</querydsl.version>
	</properties>

        <inceptionYear>2013</inceptionYear>

	<developers>
		<developer>
			<name>Ralph Schaer</name>
			<email>ralphschaer@gmail.com</email>
		</developer>
	</developers>

	<licenses>
		<license>
			<name>Apache 2</name>
			<url>http://www.apache.org/licenses/LICENSE-2.0.txt</url>
			<distribution>repo</distribution>
		</license>
	</licenses>

	<dependencyManagement>
		<dependencies>
			<dependency>
				<groupId>org.springframework</groupId>
				<artifactId>spring-framework-bom</artifactId>
				<version>4.0.4.RELEASE</version>
				<type>pom</type>
				<scope>import</scope>
			</dependency>
		</dependencies>
	</dependencyManagement>

	<dependencies>

		<dependency>
			<groupId>ch.ralscha</groupId>
			<artifactId>extdirectspring</artifactId>
			<version>1.4.1</version>
		</dependency>

		<dependency>
			<groupId>ch.rasc</groupId>
			<artifactId>extclassgenerator-annotations</artifactId>
			<version>1.0.2</version>
		</dependency>

		<dependency>
			<groupId>org.hibernate</groupId>
			<artifactId>hibernate-validator</artifactId>
			<version>5.1.1.Final</version>
			<optional>true</optional>
		</dependency>

		<dependency>
			<groupId>org.hibernate</groupId>
			<artifactId>hibernate-core</artifactId>
			<version>${hibernate.version}</version>
			<optional>true</optional>
			<exclusions>
				<exclusion>
					<artifactId>xml-apis</artifactId>
					<groupId>xml-apis</groupId>
				</exclusion>
			</exclusions>
		</dependency>

		<dependency>
			<groupId>com.mysema.querydsl</groupId>
			<artifactId>querydsl-jpa</artifactId>
			<version>${querydsl.version}</version>
			<optional>true</optional>
		</dependency>

		<dependency>
			<groupId>org.springframework</groupId>
			<artifactId>spring-tx</artifactId>
			<optional>true</optional>
		</dependency>

		<dependency>
			<groupId>org.springframework</groupId>
			<artifactId>spring-context-support</artifactId>
			<optional>true</optional>
		</dependency>

		<dependency>
			<groupId>com.fasterxml.jackson.core</groupId>
			<artifactId>jackson-databind</artifactId>
			<version>2.4.0-rc3</version>
			<optional>true</optional>
		</dependency>

		<dependency>
			<groupId>org.slf4j</groupId>
			<artifactId>slf4j-api</artifactId>
			<version>1.7.7</version>
		</dependency>

		<dependency>
			<groupId>javax.servlet</groupId>
			<artifactId>javax.servlet-api</artifactId>
			<version>3.1.0</version>
			<scope>provided</scope>
		</dependency>

		<dependency>
			<groupId>com.yahoo.platform.yui</groupId>
			<artifactId>yuicompressor</artifactId>
			<version>2.4.7</version>
			<optional>true</optional>
			<exclusions>
				<exclusion>
					<groupId>rhino</groupId>
					<artifactId>js</artifactId>
				</exclusion>
			</exclusions>
		</dependency>
	</dependencies>

	<build>

		<plugins>
			<plugin>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>3.1</version>
				<configuration>
					<source>1.8</source>
					<target>1.8</target>
					<encoding>UTF-8</encoding>
				</configuration>
			</plugin>

			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-source-plugin</artifactId>
				<version>2.2.1</version>
				<executions>
					<execution>
						<id>attach-sources</id>
						<phase>verify</phase>
						<goals>
							<goal>jar-no-fork</goal>
						</goals>
					</execution>
				</executions>
			</plugin>

			<plugin>
				<groupId>com.mycila.maven-license-plugin</groupId>
				<artifactId>maven-license-plugin</artifactId>
				<version>1.10.b1</version>
				<configuration>
					<header>${basedir}/src/main/config/header.txt</header>
					<properties>
						<owner>Ralph Schaer</owner>
						<year>${project.inceptionYear}</year>
						<currentYear>2014</currentYear>
						<email>ralphschaer@gmail.com</email>
					</properties>
					<excludes>
						<exclude>**/*.xml</exclude>
						<exclude>**/*.txt</exclude>
						<exclude>**/*.md</exclude>
						<exclude>**/*.json</exclude>
						<exclude>**/*.py</exclude>
						<exclude>**/*.yml</exclude>
						<exclude>**/.gitignore</exclude>
					</excludes>
					<strictCheck>true</strictCheck>
				</configuration>
				<executions>
					<execution>
						<id>check-headers</id>
						<phase>verify</phase>
						<goals>
							<goal>check</goal>
						</goals>
					</execution>
				</executions>
			</plugin>

		</plugins>
	</build>


	<distributionManagement>
		<repository>
			<id>localwww</id>
			<url>file:///Z:/var/repository/</url>
		</repository>
	</distributionManagement>

<profiles>
  <profile>
    <id>generate-querydsl</id>
    <build>
      <plugins>
			<plugin>
				<groupId>com.mysema.maven</groupId>
				<artifactId>apt-maven-plugin</artifactId>
				<version>1.1.1</version>
				<executions>
					<execution>
						<goals>
							<goal>process</goal>
						</goals>
						<configuration>
                            <outputDirectory>target/generated-sources/main</outputDirectory>							
							<processor>com.mysema.query.apt.jpa.JPAAnnotationProcessor</processor>
						</configuration>
					</execution>
				</executions>
				<dependencies>
					<dependency>
						<groupId>com.mysema.querydsl</groupId>
						<artifactId>querydsl-apt</artifactId>
						<version>${querydsl.version}</version>
					</dependency>
					<dependency>
						<groupId>com.mysema.querydsl</groupId>
						<artifactId>querydsl-jpa</artifactId>
						<classifier>apt</classifier>
						<version>${querydsl.version}</version>
					</dependency>
				</dependencies>
			</plugin>      
      </plugins>
    </build>
  </profile>
</profiles>


</project>